borrado de los files

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                 <div class="file-group">
                     <div class="file">
                         <h2>INSOMNIA PLUGIN</h2>
-                        <img class="selectable" src="img/Foto.png" alt="Foto 25" data-file="files/Insomnia.rar">
+                        <img class="selectable" src="img/Foto.png" alt="Foto 25">
                         <p>Plugin en uso para el futuro proyecto de Insomnia (No disponible su descarga)</p>
                     </div>
                 </div>
@@ -209,7 +209,7 @@
                 <div class="file-group">
                     <div class="file">
                         <h2>Vanilla</h2>
-                        <img class="selectable" src="img/Foto.png" alt="Foto 25" data-file="files/Insomnia.rar">
+                        <img class="selectable" src="img/Foto.png" alt="Foto 25">
                         <p>El Resource Pack usado para este servidor es el Vanilla</p>
                     </div>
                 </div>
