Crafteos de la waysone agregados

--- a/index.html
+++ b/index.html
@@ -272,14 +272,29 @@
                         <p>Del datapack "Uncraftable Items"</p>
                     </div>
                     <div class="file" data-tags="dificultity">
-                        <h2>Saddle</h2>
-                        <img class="selectable" src="img/Foto36.png" alt="Foto 24">
-                        <p>Del datapack "Uncraftable Items"</p>
-                    </div>
-                    <div class="file" data-tags="dificultity">
                         <h2>Elytra</h2>
                         <img class="selectable" src="img/Foto37.png" alt="Foto 24">
                         <p>Del datapack "Uncraftable Items"</p>
+                    </div>
+                    <div class="file" data-tags="dificultity">
+                        <h2>Waystone Craft 1</h2>
+                        <img class="selectable" src="img/Foto38.png" alt="Foto 24">
+                        <p>Del datapack "Waystone"</p>
+                    </div>
+                    <div class="file" data-tags="dificultity">
+                        <h2>Waystone Craft 2</h2>
+                        <img class="selectable" src="img/Foto39.png" alt="Foto 24">
+                        <p>Del datapack "Waystone"</p>
+                    </div>
+                    <div class="file" data-tags="dificultity">
+                        <h2>Waystone Craft 3</h2>
+                        <img class="selectable" src="img/Foto40.png" alt="Foto 24">
+                        <p>Del datapack "Waystone"</p>
+                    </div>
+                    <div class="file" data-tags="dificultity">
+                        <h2>Waystone Craft 4</h2>
+                        <img class="selectable" src="img/Foto41.png" alt="Foto 24">
+                        <p>Del datapack "Waystone"</p>
                     </div>
                 </div>
             </div>
